--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <h1>Roger Calculator</h1>
+    <h1>Roger Calculator 2021</h1>
     <div id="blocks">
       <div class="block">
         <input type="text" id="n1" value="2" />
